[project]
name = "be-physical"
version = "0.1.0"
description = "new project description"
requires-python = ">=3.12.0"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

[project.urls]
Repository = "https://github.com/lpardey/be-physical"

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [".git", "__pycache__"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E231", "E501", "E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_context = true
show_error_codes = true

follow_imports = "silent"
ignore_missing_imports = true

disallow_incomplete_defs = true
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true

warn_unused_configs = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

check_untyped_defs = true

no_implicit_optional = true
no_implicit_reexport = false

strict_equality = true

exclude = [
    'be_physical/.*/migrations/.*\.py',
    '^build/.*',
    'be_physical/.*/tests/.*',
    'be_physical/conftest.py',
]

plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

mypy_path = "./be_physical"

[tool.django-stubs]
django_settings_module = "be_physical.settings"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "be_physical.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = "be_physical"
